<resources>
    <string name="app_name">Cryto Hive</string>
    <string name="button_ok">OK</string>
    <string name="no_internet_title">Error</string>
    <string name="no_internet_sub">No Internet…!Please check Internet connection.</string>
    <string name="low_price">Low Price</string>
    <string name="last_price">Last Price</string>
    <string name="high_price">High Price</string>
    <string name="base_asset">Base Asset</string>
    <string name="quote_asset">Quote Asset</string>
    <string name="volume">Volume</string>
    <string name="bid_price">Bid Price</string>
    <string name="ask_price">Ask Price</string>
    <string name="open_price">Open Price</string>
    <string name="symbol">Symbol</string>
    <string name="price">0.0</string>
</resources>